{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 82,
  "lineage": "0cfb8456-74f1-3edf-587d-d453a62c99ea",
  "resources": [
    {
      "module": "module.nicm",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pipdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/publicIPAddresses/rmpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.28.196.29",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "rmpublicip",
            "resource_group_name": "rm-resources",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.nicm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicblock",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/networkInterfaces/rmnetworkinterface",
            "internal_domain_name_suffix": "hwzcl2e4hfpefln1nhtm1335ze.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/publicIPAddresses/rmpublicip",
                "subnet_id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/virtualNetworks/rmvnet11/subnets/rmsubnet"
              }
            ],
            "location": "australiaeast",
            "name": "rmnetworkinterface",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rm-resources"
          },
          "dependencies": [
            "module.nicm.data.azurerm_public_ip.pipdata",
            "module.pipm.azurerm_public_ip.pipblock",
            "module.rgm.azurerm_resource_group.rgblock",
            "module.subnetm.azurerm_subnet.subnetblock",
            "module.vnetm.azurerm_virtual_network.vnetblock"
          ]
        }
      ]
    },
    {
      "module": "module.nsgassm",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsgdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgass1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/networkSecurityGroups/rmnsg",
            "location": "australiaeast",
            "name": "rmnsg",
            "resource_group_name": "rm-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rmr2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rmr1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nsgassm",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnetdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgass1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/virtualNetworks/rmvnet11/subnets/rmsubnet",
            "name": "rmsubnet",
            "network_security_group_id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/networkSecurityGroups/rmnsg",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rm-resources",
            "virtual_network_name": "rmvnet11"
          }
        }
      ]
    },
    {
      "module": "module.nsgassm",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgassblock",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgass1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/virtualNetworks/rmvnet11/subnets/rmsubnet",
            "network_security_group_id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/networkSecurityGroups/rmnsg",
            "subnet_id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/virtualNetworks/rmvnet11/subnets/rmsubnet"
          },
          "dependencies": [
            "module.nsgassm.data.azurerm_network_security_group.nsgdata",
            "module.nsgassm.data.azurerm_subnet.subnetdata",
            "module.nsgm.azurerm_network_security_group.nsgblock",
            "module.rgm.azurerm_resource_group.rgblock",
            "module.subnetm.azurerm_subnet.subnetblock",
            "module.vnetm.azurerm_virtual_network.vnetblock"
          ]
        }
      ]
    },
    {
      "module": "module.nsgm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgblock",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ngs1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/networkSecurityGroups/rmnsg",
            "location": "australiaeast",
            "name": "rmnsg",
            "resource_group_name": "rm-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rmr2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rmr1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rgm.azurerm_resource_group.rgblock",
            "module.subnetm.azurerm_subnet.subnetblock",
            "module.vnetm.azurerm_virtual_network.vnetblock"
          ]
        }
      ]
    },
    {
      "module": "module.pipm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pipblock",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pip1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/publicIPAddresses/rmpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.28.196.29",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "rmpublicip",
            "resource_group_name": "rm-resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgm.azurerm_resource_group.rgblock"
          ]
        }
      ]
    },
    {
      "module": "module.subnetm",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetblock",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/virtualNetworks/rmvnet11/subnets/rmsubnet",
            "name": "rmsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rm-resources",
            "virtual_network_name": "rmvnet11"
          },
          "dependencies": [
            "module.rgm.azurerm_resource_group.rgblock",
            "module.vnetm.azurerm_virtual_network.vnetblock"
          ]
        }
      ]
    },
    {
      "module": "module.vnetm",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetblock",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f025b23d-399e-425e-adbb-69e6cdf7bfcc",
            "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/virtualNetworks/rmvnet11",
            "location": "australiaeast",
            "name": "rmvnet11",
            "resource_group_name": "rm-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/virtualNetworks/rmvnet11/subnets/rmsubnet",
                "name": "rmsubnet",
                "security_group": "/subscriptions/1420c8d5-9bbc-4510-8c19-b5350cbc39c0/resourceGroups/rm-resources/providers/Microsoft.Network/networkSecurityGroups/rmnsg"
              }
            ]
          },
          "dependencies": [
            "module.rgm.azurerm_resource_group.rgblock"
          ]
        }
      ]
    }
  ]
}